[project]
name = "fpy-betadecay"
description = "Cumulative FPY and Decay Heat Calculation from TALYS Independent FPY Output"
version = "1.0.1"
authors = [
  { name="Shin Okumura/IAEA-NDS", email="s.okumura@iaea.org" },
]
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

dependencies = [
    "contourpy==1.3.1",
    "cycler==0.12.1",
    "fonttools==4.57.0",
    "kiwisolver==1.4.8",
    "matplotlib==3.10.1",
    "natsort==8.4.0",
    "networkx==3.4.2",
    "numpy==2.2.4",
    "packaging==24.2",
    "pandas==2.2.3",
    "pillow==11.2.1",
    "pyparsing==3.2.3",
    "python-dateutil==2.9.0.post0",
    "pytz==2025.2",
    "six==1.17.0",
    "tzdata==2025.2"
]

[project.urls]
Homepage = "https://github.com/shinokumura/FPY_betadecay"
Issues = "https://github.com/shinokumura/FPY_betadecay/issues"

[project.scripts]
fpy-betadecay = "fpy_betadecay.main:cli"


[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]